// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShiftStatus Should render schedule edit shift status in approved state 1`] = `
<div
  className="DutyScheduleEdit-ShiftStatus"
>
  <Connect(ApproveButtonContainer)
    dutyShiftId={42}
    isApproved={true}
    scope="schedule-edit"
  />
</div>
`;

exports[`ShiftStatus Should render schedule edit shift status in approved state with no person 1`] = `
<div
  className="DutyScheduleEdit-ShiftStatus"
>
  <WithBemMod(DutyStatus)[mode:approved]
    mode="approved"
  />
</div>
`;

exports[`ShiftStatus Should render schedule edit shift status in unapproved state 1`] = `
<div
  className="DutyScheduleEdit-ShiftStatus"
>
  <Connect(ApproveButtonContainer)
    dutyShiftId={42}
    scope="schedule-edit"
  />
</div>
`;

exports[`ShiftStatus Should render schedule edit shift status in unapproved state with no person 1`] = `
<div
  className="DutyScheduleEdit-ShiftStatus"
>
  <WithBemMod(DutyStatus)[mode:approved]
    mode="pending"
  />
</div>
`;
